- Fixed "Surprise Me" x "Explore!" button spacing on home page - Implemented next & previous book on main page as well as surprise me on book slide - Search results preview link to respectivebook route in library if found in database - Dynamic home route allowing users to route back to this page with a specific book checkout in mind -  Implemented checkout button that routes back home from book/id page - Fixed overdone margin left on home page

--- a/turi-library-webapp/styles/globals.css
+++ b/turi-library-webapp/styles/globals.css
@@ -92,7 +92,7 @@ button:hover, input[type="submit"]:hover, .button:hover{
       height:auto;
     }
     .home-container{
-      @apply mx-10;
+      @apply mx-0;
     }
     .dashboard-container{
       @apply h-full flex flex-col;
